<resources>
    <string name="app_name">DanRosJCxxPrac</string>
    <string name="pub">Pub</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="msg">Msg</string>
    <string name="enter_new_msg_here">enter new msg here</string>
    <string name="hello_world_dan">Hello World, dan</string>
    <string name="update">update</string>
    <string name="ros_master_uri">ROS_MASTER_URI</string>
    <string name="ros_ip">ROS_IP</string>
</resources>
