<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world_dan"
        android:gravity="center_horizontal"
        android:id="@+id/textView"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/enter_new_msg_here"
        android:id="@+id/editText"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:text="@string/msg"
        android:id="@+id/button" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/radGroup"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:id="@+id/radioButton_auto"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual"
            android:onClick="onRadioButtonClicked"
            android:id="@+id/radioButton_manual"
            />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pub"
        android:enabled="false"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/radGroup"
        android:id="@+id/button2" />
</RelativeLayout>
